--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.15",
         "sensio/framework-extra-bundle": "^6.1",
+        "sylius/ui": "dev-main",
+        "sylius/ui-bundle": "^1.12",
+        "sylius/resource-bundle": "dev-feature/item-provider",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
         "symfony/doctrine-messenger": "6.1.*",
@@ -96,13 +99,25 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
         "symfony/debug-bundle": "6.1.*",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "^1.48",
         "symfony/phpunit-bridge": "^6.2",
         "symfony/stopwatch": "6.1.*",
-        "symfony/web-profiler-bundle": "6.1.*"
-    }
+        "symfony/web-profiler-bundle": "6.1.*",
+        "zenstruck/foundry": "^1.28"
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url":  "git@github.com:loic425/sylius-ui.git"
+        },
+        {
+            "type": "vcs",
+            "url":  "git@github.com:loic425/SyliusResourceBundle.git"
+        }
+    ]
 }
