--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,13 @@
         "doctrine/doctrine-bundle": "^2.8",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "pagerfanta/doctrine-orm-adapter": "^3.7",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.15",
         "sensio/framework-extra-bundle": "^6.1",
+        "sylius/resource-bundle": "dev-feature/placeholder-action",
         "sylius/ui": "dev-main",
         "sylius/ui-bundle": "^1.12",
-        "sylius/resource-bundle": "dev-feature/placeholder-action",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
         "symfony/doctrine-messenger": "6.1.*",
