Use default provider (from request)

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -35,9 +35,6 @@ services:
     app.repository.book:
         class: App\Repository\BookRepository
 
-    App\State\Provider\CollectionProvider:
-        $locator: !tagged_locator { tag: 'sylius.repository' }
-
     Sylius\Component\Resource\Context\Initiator\RequestContextInitiator: null
 
     Sylius\Component\Resource\Metadata\Operation\HttpOperationInitiator: null
@@ -58,6 +55,6 @@ services:
 
     Sylius\Component\Resource\Symfony\Request\RepositoryArgumentResolver: null
 
-    Sylius\Component\Resource\Symfony\Request\State\ItemProvider:
+    Sylius\Component\Resource\Symfony\Request\State\Provider:
         arguments:
             $locator: !tagged_locator { tag: 'sylius.repository' }
