--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,6 +10,8 @@ services:
     _instanceof:
         Sylius\Component\Resource\Repository\RepositoryInterface:
             tags: ['sylius.repository']
+        Sylius\Component\Resource\State\ProcessorInterface:
+            tags: ['sylius.state_processor']
         Sylius\Component\Resource\State\ProviderInterface:
             tags: ['sylius.state_provider']
         Sylius\Component\Resource\State\ResponderInterface:
@@ -39,6 +41,10 @@ services:
 
     Sylius\Component\Resource\Metadata\Operation\HttpOperationInitiator: null
 
+    Sylius\Component\Resource\State\Processor:
+        $locator: !tagged_locator { tag: 'sylius.state_processor' }
+    Sylius\Component\Resource\State\ProcessorInterface: '@Sylius\Component\Resource\State\Processor'
+
     Sylius\Component\Resource\State\Provider:
         $locator: !tagged_locator { tag: 'sylius.state_provider' }
     Sylius\Component\Resource\State\ProviderInterface: '@Sylius\Component\Resource\State\Provider'
@@ -48,13 +54,16 @@ services:
     Sylius\Component\Resource\State\ResponderInterface: '@Sylius\Component\Resource\State\Responder'
 
     Sylius\Component\Resource\Symfony\EventListener\ReadListener:
-        tags: [{ name: 'kernel.event_listener', event: 'kernel.request' }]
+        tags: [{ name: 'kernel.event_listener', event: 'kernel.request', priority: 4 }]
 
     Sylius\Component\Resource\Symfony\EventListener\FormListener:
-        tags: [ { name: 'kernel.event_listener', event: 'kernel.view' } ]
+        tags: [ { name: 'kernel.event_listener', event: 'kernel.view', priority: 128 } ]
+
+    Sylius\Component\Resource\Symfony\EventListener\WriteListener:
+        tags: [ { name: 'kernel.event_listener', event: 'kernel.view', priority: 32 } ]
 
     Sylius\Component\Resource\Symfony\EventListener\RespondListener:
-        tags: [{ name: 'kernel.event_listener', event: 'kernel.view' }]
+        tags: [{ name: 'kernel.event_listener', event: 'kernel.view', priority: 8 }]
 
     Sylius\Component\Resource\Symfony\Form\Factory\FormFactory: null
     Sylius\Component\Resource\Symfony\Form\Factory\FormFactoryInterface: '@Sylius\Component\Resource\Symfony\Form\Factory\FormFactory'
