--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.15",
         "sensio/framework-extra-bundle": "^6.1",
-        "sylius/resource-bundle": "dev-fix/form-listener",
+        "sylius/resource-bundle": "dev-feature/resource-with-templates-dir",
         "sylius/ui": "dev-main",
         "sylius/ui-bundle": "^1.12",
         "symfony/asset": "6.1.*",
