Use Persist and Remove processor

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -73,3 +73,11 @@ services:
     Sylius\Component\Resource\Symfony\Request\State\Provider:
         arguments:
             $locator: !tagged_locator { tag: 'sylius.repository' }
+
+    Sylius\Component\Resource\Doctrine\Common\PersistProcessor: null
+    Sylius\Component\Resource\Doctrine\Common\RemoveProcessor: null
+
+    Sylius\Component\Resource\Doctrine\Common\Metadata\Resource\Factory\DoctrineResourceMetadataCollectionFactory:
+        decorates: 'sylius.resource_metadata_collection.factory.attributes'
+        arguments:
+            $decorated: '@.inner'
