--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.15",
         "sensio/framework-extra-bundle": "^6.1",
-        "sylius/resource-bundle": "dev-feature/current-page",
+        "sylius/resource-bundle": "dev-feature/grid-provider",
         "sylius/ui": "dev-main",
         "sylius/ui-bundle": "^1.12",
         "symfony/asset": "6.1.*",
@@ -103,6 +103,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "phpunit/phpunit": "^9.5",
+        "sylius/grid-bundle": "^1.12",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
         "symfony/debug-bundle": "6.1.*",
