Add subscription entity

--- a/config/packages/sylius_resource.yaml
+++ b/config/packages/sylius_resource.yaml
@@ -8,3 +8,6 @@ sylius_resource:
         app.book:
             classes:
                 model: App\Entity\Book
+        app.subscription:
+            classes:
+                model: App\Entity\Subscription
