--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,17 +10,15 @@ services:
     _instanceof:
         Sylius\Component\Resource\Repository\RepositoryInterface:
             tags: ['sylius.repository']
-        Sylius\Component\Resource\State\ProcessorInterface:
-            tags: ['sylius.state_processor']
-        Sylius\Component\Resource\State\ProviderInterface:
-            tags: ['sylius.state_provider']
-        Sylius\Component\Resource\State\ResponderInterface:
-            tags: ['sylius.state_responder']
+        Sylius\Component\Grid\Data\DataProviderInterface:
+            tags: ['sylius.grid_data_provider']
 
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            $dataDir: '%kernel.project_dir%/config/data'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -40,5 +38,13 @@ services:
     App\Menu\AdminMenuBuilder:
         decorates: 'Sylius\AdminUi\Menu\MenuBuilderInterface'
 
+    App\BoardGameBlog\Infrastructure\Sylius\Grid\Data\Provider:
+        decorates: 'sylius.grid.data_provider'
+        arguments:
+            $locator: !tagged_locator { tag: 'sylius.grid_data_provider' }
+            $decorated: '@.inner'
+
+    sylius.grid.array_to_definition_converter: '@App\BoardGameBlog\Infrastructure\Sylius\Grid\Definition\ArrayToDefinitionConverter'
     Sylius\Component\Grid\Data\DataProviderInterface: '@sylius.grid.data_provider'
+    Sylius\Component\Grid\Definition\ArrayToDefinitionConverterInterface: '@App\BoardGameBlog\Infrastructure\Sylius\Grid\Definition\ArrayToDefinitionConverter'
     Sylius\Component\Grid\Provider\GridProviderInterface: '@sylius.grid.chain_provider'
