--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.15",
         "sensio/framework-extra-bundle": "^6.1",
-        "sylius/resource-bundle": "dev-poc-new-resource-metadata",
+        "sylius/resource-bundle": "dev-feature/bulk_update",
         "sylius/ui": "dev-main",
         "sylius/ui-bundle": "^1.12",
         "symfony/asset": "6.1.*",
@@ -45,6 +45,7 @@
         "symfony/uid": "6.1.*",
         "symfony/validator": "6.1.*",
         "symfony/web-link": "6.1.*",
+        "symfony/workflow": "6.1.*",
         "symfony/yaml": "6.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
@@ -118,6 +119,10 @@
         {
             "type": "vcs",
             "url":  "git@github.com:loic425/sylius-ui.git"
+        },
+        {
+            "type": "vcs",
+            "url":  "git@github.com:loic425/SyliusResourceBundle.git"
         }
     ]
 }
