--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "phpstan/phpdoc-parser": "^1.15",
         "sensio/framework-extra-bundle": "^6.1",
         "sylius/resource-bundle": "dev-feature/bulk_update",
-        "sylius/ui": "dev-main",
+        "monofony/sylius-ui": "dev-main",
         "sylius/ui-bundle": "^1.12",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
@@ -118,7 +118,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url":  "git@github.com:loic425/sylius-ui.git"
+            "url":  "git@github.com:Monofony/sylius-ui.git"
         },
         {
             "type": "vcs",
