--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,15 @@
         "doctrine/doctrine-bundle": "^2.8",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "monofony/sylius-ui": "dev-main",
         "pagerfanta/doctrine-orm-adapter": "^3.7",
         "pagerfanta/twig": "^3.7",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.15",
         "sensio/framework-extra-bundle": "^6.1",
-        "sylius/resource-bundle": "dev-feature/bulk_update",
-        "monofony/sylius-ui": "dev-main",
+        "sylius/grid-bundle": "^1.13@dev",
+        "sylius/resource": "*",
+        "sylius/resource-bundle": "^1.11@alpha",
         "sylius/ui-bundle": "^1.12",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
@@ -105,7 +107,6 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "phpunit/phpunit": "^9.5",
-        "sylius/grid-bundle": "^1.12",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
         "symfony/debug-bundle": "6.1.*",
@@ -119,10 +120,6 @@
         {
             "type": "vcs",
             "url":  "git@github.com:Monofony/sylius-ui.git"
-        },
-        {
-            "type": "vcs",
-            "url":  "git@github.com:loic425/SyliusResourceBundle.git"
         }
     ]
 }
